--- a/arch/arm/boot/dts/nuc980-iot-v1.0.dts
+++ b/arch/arm/boot/dts/nuc980-iot-v1.0.dts
@@ -13,24 +13,59 @@
 /dts-v1/;
 #include "nuc980.dtsi"
 
+#include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/input/input.h>
+
 / {
 	model = "Nuvoton NUC980 IOT V1.0";
 	compatible = "nuvoton,nuc980-dev-v1.0", "nuvoton,nuc980";
 
 	chosen {
-		bootargs = "root=/dev/ram0 console=ttyS0,115200n8 rdinit=/sbin/init mem=64M lpj=744448";
+		bootargs = "console=ttyS0,115200n8 mem=64M lpj=744448";
+	};
+
+	leds {
+		compatible = "gpio-leds";
+
+		status {
+			label = "kooiot:green:status";
+			gpios = <&gpio 0x48 GPIO_ACTIVE_LOW>; /* PB8 */
+			linux,default-trigger = "heartbeat";
+		};
+
+		csq {
+			label = "kooiot:green:csq";
+			gpios = <&gpio 0x4D GPIO_ACTIVE_HIGH>; /* PB13 */
+			default-state = "off";
+		};
+	};
+
+	gpio_keys {
+		compatible = "gpio-keys";
+
+		reset {
+			label = "reset";
+			linux,code = <KEY_RESTART>;
+			gpios = <&gpio 0x8A GPIO_ACTIVE_LOW>; /* PE.10 / EINT2 - K1 */
+		};
+
+		wps {
+			label = "wps";
+			linux,code = <KEY_WPS_BUTTON>;
+			gpios = <&gpio 0x8C GPIO_ACTIVE_LOW>; /* PE.12 / EINT3 - K2 */
+		};
 	};
 
 	apb {
 		uart1: serial@b0071000 {
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_uart1_PF>;
-			pdma-enable = <1>;
-			status = "okay";
+			status = "disabled";
 		};
 
 		uart2: serial@b0072000 {
-			status = "disabled";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_uart2_PA_2>;
+			pdma-enable = <1>;
+			status = "okay";
 		};
 
 		uart3: serial@b0073000 {
@@ -39,34 +74,37 @@
 
 		uart4: serial@b0074000 {
 			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_uart4_PD>;
+			pinctrl-0 = <&pinctrl_uart4_PD_2>;
 			pdma-enable = <1>;
-			status = "disabled";
+			status = "okay";
 		};
 
 		uart5: serial@b0075000 {
 			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_uart5_PG>;
+			pinctrl-0 = <&pinctrl_uart5_PG_2>;
 			pdma-enable = <1>;
-			status = "disabled";
+			status = "okay";
 		};
 
 		uart6: serial@b0076000 {
 			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_uart6_PD>;
+			pinctrl-0 = <&pinctrl_uart6_PA_2>;
 			pdma-enable = <1>;
-			status = "disabled";
+			status = "okay";
 		};
 
 		uart7: serial@b0077000 {
 			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_uart7_PB>;
+			pinctrl-0 = <&pinctrl_uart7_PB_2>;
 			pdma-enable = <1>;
-			status = "disabled";
+			status = "okay";
 		};
 
 		uart8: serial@b0078000 {
-			status = "disabled";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_uart8_PA>;
+			pdma-enable = <1>;
+			status = "okay";
 		};
 
 		uart9: serial@b0079000 {
@@ -81,11 +119,23 @@
 		};
 
 		can1: can@b00a1000 {
-			status = "disabled";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_uart9_PB_PE>;
+			status = "okay";
+		};
+
+		can2: can@b00a2000 {
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_can2_PB>;
+			status = "okay";
+		};
+
+		can3: can@b00a3000 {
+			status = "okay";
 		};
 
 		rtc: rtc@b0041000 {
-			status = "disabled";
+			status = "okay";
 		};
 
 		nadc: nadc@b0043000 {
@@ -110,6 +160,54 @@
 						 3 0x6 0x1 0
 						 3 0x7 0x1 0
 						>;
+				};
+			};
+
+			uart2 {
+				pinctrl_uart2_PA_2: uart2-PA-2 {
+					nuvoton,pins =
+						<0 9 2 0
+						 0 0xa 2 0>;
+				};
+			};
+
+			uart4 {
+				pinctrl_uart4_PD_2: uart4-PD-2 {
+					nuvoton,pins =
+						<3 0xc 1 0
+						 3 0xd 1 0>;
+				};
+			};
+
+			uart5 {
+				pinctrl_uart5_PG_2: uart5-PG-2 {
+					nuvoton,pins =
+						<6 6 2 0
+						 6 7 2 0>;
+				};
+			};
+
+			uart6 {
+				pinctrl_uart6_PA_2: uart6-PA-2 {
+					nuvoton,pins =
+						<0 4 1 0
+						 0 5 1 0>;
+				};
+			};
+
+			uart7 {
+				pinctrl_uart7_PB_2: uart7-PB-2 {
+					nuvoton,pins =
+						<1 4 5 0
+						 1 6 5 0>;
+				};
+			};
+
+			uart8 {
+				pinctrl_uart8_PA: uart8-PA {
+					nuvoton,pins =
+						<0 0xb 2 0
+						 0 0xc 2 0>;
 				};
 			};
 		};
@@ -139,16 +237,16 @@
 				spi-rx-bus-width = <4>;
 				spi-tx-bus-width = <4>;
 				partition@0 {
-					label = "u-boot";
-					reg = <0x00000000 0x00200000>;
+					label = "uboot";
+					reg = <0x00000000 0x00180000>;
 				};
 				partition@1 {
-					label = "kernel";
-					reg = <0x00200000 0x01600000>;
+					label = "dtb";
+					reg = <0x00180000 0x00020000>;
 				};
 				partition@2 {
-					label = "user";
-					reg = <0x01600000 0x06A00000>;
+					label = "firmware";
+					reg = <0x00200000 0x00000000>;
 				};
 			};
 		};
@@ -206,7 +304,7 @@
 		};
 
 		i2c0: i2c0@b0080000 {
-			status = "okay";
+			status = "disabled";
 
 			nau8822: nau8822@1a {
 				compatible = "nuvoton,nau8822";
@@ -233,19 +331,15 @@
 	};
 
 	ahb {
-
 		usbh_ehci@b0015000 {
-			pinctrl-0 = <>; /*disable PWREN and OVC*/
-			ov_active = <1>;/*disable PWREN and OVC*/
-			status = "disabled";
+			status = "okay";
 		};
 		usbh_ohci@b0017000{
-			ov_active = <1>;/*disable PWREN and OVC*/
-			status = "disabled";
+			status = "okay";
 		};
 
 		usbdev@b0016000 {
-			status = "disabled";
+			status = "okay";
 		};
 
 		fmi@b0019000 {
@@ -273,14 +367,14 @@
 		};
 
 		sdh@b0018000 {
-			status = "okay";
+			status = "disabled";
 		};
 
 		emac0@b0012000 {
 			status = "okay";
 		};
 		emac1@b0022000 {
-			status = "disabled";
+			status = "okay";
 		};
 		cap0@b0024000 {
 			status = "disabled";
